fix bug 166085 [Assertion constructing about: URIs [@nsAboutProtocolHandler:122]] This is a regression fix from the fix for bug 163225. The assertions never made sense and now they are exposed. r=bzbarsky, sr=darin