content/html/document/src/nsWyciwygProtocolHandler.cpp
@@ -78,9 +78,6 @@ nsWyciwygProtocolHandler::NewURI(const nsACString &aSpec,
 {
   nsresult rv;
 
-  // no concept of a relative wyciwyg url
-  NS_ASSERTION(!aBaseURI, "base url passed into wyciwyg protocol handler");
-
   nsIURI* url;
   rv = nsComponentManager::CreateInstance(kSimpleURICID, nsnull,
                                             NS_GET_IID(nsIURI),
