netwerk/protocol/datetime/src/nsDateTimeHandler.cpp
@@ -102,9 +102,6 @@ nsDateTimeHandler::NewURI(const nsACString &aSpec,
                           nsIURI **result) {
     nsresult rv;
 
-    // no concept of a relative datetime url
-    NS_ASSERTION(!aBaseURI, "base url passed into datetime protocol handler");
-
     nsIURI* url;
     rv = nsComponentManager::CreateInstance(kSimpleURICID, nsnull,
                                             NS_GET_IID(nsIURI),
